<resources>
    <string name="app_name">Lacake</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Navegação</string>
    <string name="title_notifications">Pedidos</string>
    <string name="title_activity_login">Atividade Login</string>
    <string name="prompt_email">Digite o E-mail</string>
    <string name="prompt_password">Digite a senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="dont_have_account">Não tem uma conta?</string>
    <string name="welcome">"Bem vindo"</string>
    <string name="invalid_username">Usuário inválido</string>
    <string name="invalid_password">Senha precisa ter mais de 5 caractéres</string>
    <string name="password">Senha</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="email">E-mail</string>
    <string name="img">Imagen</string>
    <string name="icon">Ícone</string>
    <string name="settings">Configurações</string>
    <string name="notifications">Notificações</string>
    <string name="about_app">Sobre o App</string>
    <string name="clean_history">Limpar histórico de busca</string>
    <string name="contact_us">Fale conosco</string>
    <string name="leave">Sair</string>
    <string name="or">Ou</string>
    <string name="address">Endereço</string>
    <string name="pay_method">Método de pagamento</string>
    <string name="favorites">Favoritos</string>
    <string name="profile_name_placeholder">José Leonardo Souza Santos</string>
    <string name="party_cakes">Bolos de festa</string>
    <string name="estimated_time">Tempo de entrega estimado:</string>

    <string name="title_activity_maps">Map</string>

    <string name="google_maps_API_key">AIzaSyDe8QNOjx_xhZPCKbJAPN4rgSfriDO8jk0</string>

</resources>