<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco1">
    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/icon"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/default_pfp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:shapeAppearanceOverlay="@style/circleCorner"
        android:contentDescription="@string/img"

        />
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name_placeholder"
        android:textColor="@color/vermelhoForte"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_notify"
        />
    <TextView
        android:id="@+id/paymethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_method"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_info" />

    <TextView
        android:id="@+id/cleans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="56dp"
        android:text="@string/favorites"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymethod"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_trash" />
    <TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cleans"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_chat"
        />



</androidx.constraintlayout.widget.ConstraintLayout>