<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco1"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintRight_toLeftOf="@id/settings"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/icon"
        />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/vermelhoForte"
        android:textSize="30sp"
        android:fontFamily="@font/helveticass"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="10dp"
        />
    <TextView
        android:id="@+id/notifys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:fontFamily="@font/helveticass"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_notify"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_switch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icon"
        />
    <TextView
        android:id="@+id/abouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:fontFamily="@font/helveticass"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifys"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_info" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifys"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icon"
        />
    <TextView
        android:id="@+id/cleans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="30dp"
        android:text="@string/clean_history"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:fontFamily="@font/helveticass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abouts"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_trash" />
    <TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/helveticass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cleans"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_chat"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cleans"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icon"
        />
    <TextView
        android:id="@+id/exits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave"
        android:textColor="@color/vermelhoForte"
        android:textSize="25sp"
        android:fontFamily="@font/helveticass"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_arrow_right"
        />
</androidx.constraintlayout.widget.ConstraintLayout>