<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tela_cadastro"
    tools:context=".tela_cadastro">

    <View
        android:id="@+id/fundobranco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_padrao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/ic_cobertura1"
            android:scaleX="-1.5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/ic_cobertura2"
            android:scaleX="1.5" />

    </RelativeLayout>
    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/icon"
        app:tint="@color/branco1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_cakes"
        android:textColor="@color/branco1"
        android:textSize="30sp"
        android:fontFamily="@font/helveticass"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/icon"
        app:tint="@color/branco1"
        />

    <ImageView
        android:id="@+id/containerCate"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/container_cate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/img"
        android:rotation="90"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/card_cake1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/fancy_cake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/containerCate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/img"

        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/baker_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/default_pfp"
        app:layout_constraintStart_toStartOf="@id/containerCate"
        app:layout_constraintTop_toTopOf="@id/containerCate"
        android:layout_marginTop="80dp"
        android:layout_marginStart="63dp"
        app:shapeAppearanceOverlay="@style/roundedCorner"
        android:contentDescription="@string/img"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bolinhos"
        android:textColor="@color/branco1"
        android:textSize="23sp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/containerCate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bolinhos"
        android:textColor="@color/branco1"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/containerCate"
        app:layout_constraintTop_toTopOf="@id/containerCate"
        android:layout_marginTop="148dp"
        android:layout_marginStart="63dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimated_time"
        android:textColor="@color/branco1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/containerCate"
        app:layout_constraintTop_toTopOf="@id/containerCate"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="75dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textColor="@color/branco1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/containerCate"
        app:layout_constraintTop_toTopOf="@id/containerCate"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="63dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>